deploy/kubernetes/examples/traefik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mhserveremu
  namespace: mhserveremu
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: mhserveremu.localdev
      allowedRoutes:
        namespaces:
          from: Same
