deploy/kubernetes/examples/traefik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mhserveremu
  namespace: mhserveremu
spec:
  parentRefs:
    - name: mhserveremu
  hostnames:
    - mhserveremu.localdev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mhserveremu
          port: 8080

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mhserveremu-static
  namespace: mhserveremu
spec:
  parentRefs:
    - name: mhserveremu
  hostnames:
    - static.mhserveremu.localdev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mhserveremu-static
          port: 80
