deploy/kubernetes/examples/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mhserveremu
  namespace: mhserveremu
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: mhserveremu.localdev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mhserveremu
                port:
                  number: 8080
