deploy/kubernetes/examples/traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mhserveremu
  namespace: mhserveremu
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mhserveremu.localdev`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: mhserveremu
          port: 8080
    - match: Host(`static.mhserveremu.localdev`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: mhserveremu-static
          port: 80
